--- a/ci/samples/CMakeLists.txt
+++ b/ci/samples/CMakeLists.txt
@@ -4,19 +4,26 @@ project(Sample VERSION 1.0.0 LANGUAGES CXX)
 include(CTest)
 find_package(CMakeExternal CONFIG REQUIRED)
 
-add_executable(sample main.cpp)
+add_executable(sample)
+target_sources(sample PRIVATE
+  main.cpp)
 target_compile_features(sample PUBLIC cxx_std_17)
 set_target_properties(sample PROPERTIES
-  CXX_STANDARD 17
-  CXX_STANDARD_REQUIRED ON
   VERSION ${PROJECT_VERSION})
-target_link_libraries(sample PRIVATE CMakeExternal::Foo)
+target_link_libraries(sample PRIVATE
+  absl::flags_parse
+  absl::log
+  absl::strings
+  CMakeExternal::Foo
+)
 
 if(BUILD_TESTING)
   add_test(NAME sample_UT COMMAND sample)
 endif()
 
+# Install
 include(GNUInstallDirs)
 install(TARGETS sample
   EXPORT SampleTargets
-  DESTINATION ${CMAKE_INSTALL_BINDIR})
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
