--- a/.github/workflows/riscv64_docker_cmake.yml
+++ b/.github/workflows/riscv64_docker_cmake.yml
@@ -24,27 +24,33 @@ jobs:
     name: riscv64•${{matrix.distro}}
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-    - name: Check docker
-      run: |
-        docker info
-        docker buildx ls
-    - name: Build env image
-      run: make --directory=ci riscv64_${{matrix.distro}}_env
-    - name: Build devel project
-      run: make --directory=ci riscv64_${{matrix.distro}}_devel
-    - name: Build project
-      run: make --directory=ci riscv64_${{matrix.distro}}_build
-    - name: Test project
-      run: make --directory=ci riscv64_${{matrix.distro}}_test
+      - uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Check docker
+        run: |
+          docker info
+          docker buildx ls
+      - name: Build env image
+        run: make --directory=ci riscv64_${{matrix.distro}}_env
+      - name: Build devel project
+        run: make --directory=ci riscv64_${{matrix.distro}}_devel
+      - name: Build project
+        run: make --directory=ci riscv64_${{matrix.distro}}_build
+      - name: Test project
+        run: make --directory=ci riscv64_${{matrix.distro}}_test
 
-    - name: Build install env image
-      run: make --directory=ci riscv64_${{matrix.distro}}_install_env
-    - name: Build install devel project
-      run: make --directory=ci riscv64_${{matrix.distro}}_install_devel
-    - name: Build install project
-      run: make --directory=ci riscv64_${{matrix.distro}}_install_build
-    - name: Test install project
-      run: make --directory=ci riscv64_${{matrix.distro}}_install_test
+      - name: Build install env image
+        run: make --directory=ci riscv64_${{matrix.distro}}_install_env
+      - name: Build install devel project
+        run: make --directory=ci riscv64_${{matrix.distro}}_install_devel
+      - name: Build install project
+        run: make --directory=ci riscv64_${{matrix.distro}}_install_build
+      - name: Test install project
+        run: make --directory=ci riscv64_${{matrix.distro}}_install_test
+
+  riscv64_docker_cmake:
+    runs-on: ubuntu-latest
+    needs: docker
+    steps:
+      - uses: actions/checkout@v4
