--- a/.github/workflows/amd64_linux_cmake.yml
+++ b/.github/workflows/amd64_linux_cmake.yml
@@ -41,12 +41,12 @@ jobs:
       - name: Cache CMake dependency source code
         uses: actions/cache@v4
         with:
-          key: ${{env.deps_src_key}}-${{hashFiles('**/CMakeLists.txt', 'cmake/**')}}
+          key: ${{env.deps_src_key}}-${{hashFiles('CMakeLists.txt', 'cmake/**')}}
           path: ${{github.workspace}}/build/_deps/*-src
       - name: Cache CMake dependency build code
         uses: actions/cache@v4
         with:
-          key: ${{env.deps_build_key}}-${{hashFiles('**/CMakeLists.txt', 'cmake/**')}}
+          key: ${{env.deps_build_key}}-${{hashFiles('CMakeLists.txt', 'cmake/**')}}
           path: |
             ${{github.workspace}}/build/_deps/*-build
             ${{github.workspace}}/build/_deps/*-subbuild
