--- a/.github/workflows/amd64_linux_cmake.yml
+++ b/.github/workflows/amd64_linux_cmake.yml
@@ -53,9 +53,9 @@ jobs:
       - name: Cache CCache
         uses: actions/cache@v4
         with:
-          key: ${{env.ccache_key}}-${{github.run_id}}
+          key: ${{env.ccache_key}}-${{github.sha}}
           restore-keys: |
-            ${{env.ccache_key}}-${{github.run_id}}
+            ${{env.ccache_key}}-${{github.sha}}
             ${{env.ccache_key}}
           path: ${{env.CCACHE_DIR}}
 
