--- a/.github/workflows/arm64_macos_cmake.yml
+++ b/.github/workflows/arm64_macos_cmake.yml
@@ -8,6 +8,12 @@ concurrency:
   cancel-in-progress: true
 
 # Building using the github runner environement directly.
+env:
+  CCACHE_BASEDIR: ${{github.workspace}}
+  CCACHE_DIR: ${{github.workspace}}/.ccache
+  CMAKE_C_COMPILER_LAUNCHER: ccache
+  CMAKE_CXX_COMPILER_LAUNCHER: ccache
+
 jobs:
   native:
     strategy:
@@ -22,8 +28,11 @@ jobs:
     env:
       deps_src_key: arm64_macos_deps_src
       deps_build_key: arm64_macos_deps_build_${{matrix.cmake.name}}
+      ccache_key: arm64_macos_ccache_${{matrix.cmake.name}}
     steps:
       - uses: actions/checkout@v5
+      - name: Install Dependencies
+        run: brew install ccache
 
       # CONFIGURING CACHES
       - name: Cache CMake dependency source code
@@ -38,6 +47,14 @@ jobs:
           path: |
             ${{github.workspace}}/build/_deps/*-build
             ${{github.workspace}}/build/_deps/*-subbuild
+      - name: Cache CCache
+        uses: actions/cache@v4
+        with:
+          key: ${{env.ccache_key}}-${{github.sha}}
+          restore-keys: |
+            ${{env.ccache_key}}-${{github.sha}}
+            ${{env.ccache_key}}
+          path: ${{env.CCACHE_DIR}}
 
       - name: Check CMake
         run: cmake --version
