--- a/.github/workflows/amd64_macos_cmake.yml
+++ b/.github/workflows/amd64_macos_cmake.yml
@@ -56,12 +56,14 @@ jobs:
             ${{env.ccache_key}}-${{github.sha}}
             ${{env.ccache_key}}
           path: ${{env.CCACHE_DIR}}
-      - uses: irgaly/xcode-cache@v1
+      - name: Cache XCode
+        uses: actions/cache@v4
         with:
           key: ${{env.xcode_key}}-${{github.sha}}
           restore-keys: |
             ${{env.xcode_key}}-${{github.sha}}
             ${{env.xcode_key}}-
+          path: ~/Library/Developer/Xcode/DerivedData
 
       - name: Check CMake
         run: cmake --version
