--- a/.github/workflows/amd64_linux_cmake.yml
+++ b/.github/workflows/amd64_linux_cmake.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           key: ${{env.deps_src_key}}-${{hashFiles('CMakeLists.txt', 'cmake/**')}}
           path: ${{github.workspace}}/build/_deps/*-src
-      - name: Cache CMake dependency build code
+      - name: Cache CMake dependency build
         uses: actions/cache@v4
         with:
           key: ${{env.deps_build_key}}-${{hashFiles('CMakeLists.txt', 'cmake/**')}}
